--- a/main.html
+++ b/main.html
@@ -12,5 +12,29 @@
 </script>
 
 </body>
-
+	<div  style="background-color:#f5f5f5">
+		   <h2>Shaw's News</h2>
+	<div class="container">
+    
+	<div class="card">
+		<h3>Latest News Articles</h3>
+		<ul >
+			<li>Article 1</li>
+			<li>Article 2</li>
+			<li>Article 3</li>
+		</ul>
+	</div>
+	<div class="card">
+		<h3>Main Article</h3>
+		<p>Lorem ipsum dolor sit amet consecular ded sart yuor bdjuan jbkdjo no fed Create a webpage layout that matches the provided image. Your HTML and CSS must contain the following 
+		</p>
+	</div>
+	<div class="card">
+		<h3>Pictorial News</h3>
+		<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/delhi_rains_1674974112847_1674981888135_1674981888135.jpeg" class="img">
+		<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/ADANI-INDIA-GAUTAM-ADANI-0_1675011651023_1675011651023_1675011672003_1675011672003.JPG"  class="img">
+		<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/FRANCE-REFORM-PENSIONS-31_1675022359706_1675022359706_1675022383851_1675022383851.JPG"  class="img">
+	</div>
+	</div>
+	</div>
 </html>
