--- a/main.html
+++ b/main.html
@@ -13,10 +13,12 @@
 
 </body>
 	<div  style="background-color:#f5f5f5">
+		<header class="head2">
 		   <h2>Shaw's News</h2>
+		</header>
 	<div class="container">
     
-	<div class="card">
+	<div class="latest-news-section">
 		<h3>Latest News Articles</h3>
 		<ul >
 			<li>Article 1</li>
@@ -29,12 +31,14 @@
 		<p>Lorem ipsum dolor sit amet consecular ded sart yuor bdjuan jbkdjo no fed Create a webpage layout that matches the provided image. Your HTML and CSS must contain the following 
 		</p>
 	</div>
-	<div class="card">
+		
+	<div class="pictorial-news-section">
 		<h3>Pictorial News</h3>
 		<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/delhi_rains_1674974112847_1674981888135_1674981888135.jpeg" class="img">
 		<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/ADANI-INDIA-GAUTAM-ADANI-0_1675011651023_1675011651023_1675011672003_1675011672003.JPG"  class="img">
 		<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/FRANCE-REFORM-PENSIONS-31_1675022359706_1675022359706_1675022383851_1675022383851.JPG"  class="img">
 	</div>
+		
 	</div>
 	</div>
 </html>
