--- a/main.html
+++ b/main.html
@@ -26,7 +26,7 @@
 			<li>Article 3</li>
 		</ul>
 	</div>
-	<div class="card">
+	<div class="artilce">
 		<h3>Main Article</h3>
 		<p>Lorem ipsum dolor sit amet consecular ded sart yuor bdjuan jbkdjo no fed Create a webpage layout that matches the provided image. Your HTML and CSS must contain the following 
 		</p>
